QPID-3217: Exchanges with IVE option cause cluster inconsistencies in updatees

Since this option is rarely used, the short term fix is to disallow IVE in a cluster.
This is not a regression since it didn't work anyway.

git-svn-id: https://svn.apache.org/repos/asf/qpid/trunk/qpid@1095209 13f79535-47bb-0310-9956-ffa450edef68